--- a/.github/workflows/check_release_notes.yml
+++ b/.github/workflows/check_release_notes.yml
@@ -23,6 +23,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: .
+      - name: Install GitHub Python module
+        id: gh-py-mod
+        run: python3 -m pip install -U github
       - name: Check Release Notes
         id: release-notes
         run: ./check_release_notes.py
