Add more test workflow stuff

--- a/.github/workflows/check_release_notes.yml
+++ b/.github/workflows/check_release_notes.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Get env
         id: env
         run: env | sort
+      - name: Get stuff
+        id: stuff
+        run: jq < $GITHUB_EVENT_PATH
       - name: Install GitHub Python module
         id: gh-py-mod
         run: python3 -m pip install -U PyGithub
