--- a/.github/workflows/check_release_notes.yml
+++ b/.github/workflows/check_release_notes.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Test New Action
-        uses: danudey/check-release-notes
+        uses: danudey/check-release-notes@main
       # - name: Checkout
       #   uses: actions/checkout@v4
       #   with:
