Test a new thing

--- a/.github/workflows/check_random_status.yml
+++ b/.github/workflows/check_random_status.yml
@@ -4,7 +4,7 @@ on:
     types: [labeled, unlabeled, edited, synchronize]
 
 jobs:
-  label:
+  statusit:
     runs-on: ubuntu-latest
     permissions:
       contents: read
